# Taikos

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  cmake-build.yml  multi-os-ci.yml
Songs/1704348 Camellia feat. Nanahira - senpai, notice me!/: Camellia feat. Nanahira - senpai, notice me! (_gt) [w].osu  Camellia feat. Nanahira - senpai, notice me! (_gt).osb
Songs/1961281 Slax - Baka Paka/: Slax - Baka Paka (lefty3) [Baka 1.1x].osu  Slax - Baka Paka (lefty3) [Baka 1.2x].osu  Slax - Baka Paka (lefty3) [Baka 1.3x].osu  Slax - Baka Paka (lefty3) [Baka 1.4x].osu  Slax - Baka Paka (lefty3) [Baka].osu
Songs/2099924 Slax - Bimbo Limbo/: Slax - Bimbo Limbo (Quorum) [Inner Oni].osu
Songs/2275475 leroy - snatch the cat back/: leroy - snatch the cat back (TGGD) [give me my 3 back!!].osu
Songs/640281 J'Nique Nicole - Weight of the World English Version/: J'Nique Nicole - Weight of the World English Version (Shad0w1and) [I Love You].osu
src/: main.cpp
src/engine/: gamestates.hpp  logger.hpp
src/engine/animations/: animations.cpp  animations.hpp  easing.h
src/engine/audio/: audio.cpp  audio.hpp
src/engine/configmanager/: configmanager.hpp
src/engine/filesystem/: filesystem.hpp
src/engine/game/: game.hpp  osuTypes.hpp  resultScreen.hpp
src/engine/menu/: menu.hpp
